cli/lifeboat/src/snapshots/lifeboat__commands__tests__derive_addresses_human.snap
---
source: cli/lifeboat/src/commands.rs
expression: out.stdout
---
Bitcoin Lifeboat - Address Derivation
=====================================

Network: testnet

Receive addresses:
     0  tb1qaqg0encvurl7rzt52g94d7nqrp3v7a6dhadv8f00jprrhqavtlns2x705w
     1  tb1qn5x44rzqjc9vgzt5ldfz4r0s7kczzxxvj5w0j4d25jprajqrdetsrdtthv
     2  tb1q8ke5xqhsyqydxk9jkkrn83f6ltp7edst4xv2ar2xlqdry2g8588qpqjjdj

Change addresses:
     0  tb1qza22f2uhjpr62kcvqft9yfhnd8tfwm2fkllp3fuerm7u74wtty5qttt23f
     1  tb1qght0ll9yqxu8djltjsa9m30ajjj789cklughgqff9agqf58kfvvsn76tzs
     2  tb1qmk4hgulk4t0vnhsws8xq78dma8sc322m37md72ze0448rdtjpzvqnu43jc
