cli/lifeboat/src/snapshots/lifeboat__commands__tests__detect_secrets_json_allow.snap
---
source: cli/lifeboat/src/commands.rs
expression: out.stdout
---
{"action":"allow","findings":[],"schema_version":"0.1.0","user_facing_message":"No sensitive material was detected in this input."}
