cli/lifeboat/src/snapshots/lifeboat__commands__tests__parse_export_human_sparrow.snap
---
source: cli/lifeboat/src/commands.rs
expression: out.stdout
---
Bitcoin Lifeboat - Wallet Export
================================

Source:  sparrow
Type:    multisig (2-of-3)
Birth:   2024-01-15T00:00:00Z

Keys (3):
  [0] 4ba43603  m/48h/1h/0h/2h
  [1] 6e37edb9  m/48h/1h/0h/2h
  [2] 8dfc9b34  m/48h/1h/0h/2h

Run with --json for the full normalized export (descriptors, keys, labels).
